--- a/noarray.html
+++ b/noarray.html
@@ -10,7 +10,12 @@
 <body>
     <main>
         <div class="container">
-            <div class="img-display"></div>
+            <div class="img-display">
+                <div class="img-content-noarr">
+                    <h1 id="img-title">Svezia</h1>
+                    <p id="img-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et temporibus voluptatum suscipit tempore aliquid deleniti aut veniam inventore eligendi ex ad ullam, cumque provident totam omnis, magnam dolores dolorum corporis.</p>
+                </div>
+            </div>
             <div class="image-selector">
                 <div id="img1" class="img-sel img-1">
                     <button onclick="imgup()" class="up">^</button>
